# trident_mcc

./: .gitignore  Dockerfile  LICENSE  README.md
deployment/: trident-mcc-account-binding.yaml  trident-mcc-cluster-rolebinding.yaml  trident-mcc-clusterrole.yaml  trident-mcc-deployment.yaml  trident-mcc-full-deployment.yaml  trident-mcc-role.yaml  trident-mcc-service-account.yaml
trident-mcc/: pyproject.toml  trident_mcc..sh  trident_mcc.sh
trident-mcc/tests/: test_trident_mcc.py
trident-mcc/trident_mcc/: __main__.py  healthz.py  logging.yaml  main.py
trident-mcc/trident_mcc/k8s_client/: __init__.py  main.py
trident-mcc/trident_mcc/models/: __init__.py  models.py
trident-mcc/trident_mcc/netapp_client/: __init__.py  main.py
